# wasm-lsp-server

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  NOTES.md  README.md  build.rs  crates.js  rustfmt.toml  search-index.js  settings.html  source-files.js
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/tests/all/: cli.rs
crates/languages/: Cargo.toml
crates/languages/src/: error.rs  language.rs  lib.rs  parser.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/parsers/: Cargo.toml  build.rs
crates/parsers/benches/all/: main.rs
crates/parsers/src/: lib.rs
crates/parsers/src/core/: error.rs  language.rs  mod.rs  parser.rs
crates/parsers/src/core/language/: wast.rs  wat.rs
crates/parsers/tests/all/: main.rs
crates/rope/: Cargo.toml
crates/rope/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/benches/all/: main.rs
crates/server/src/: cli.rs  core.rs  handler.rs  lib.rs  metadata.rs  package.rs  provider.rs  server.rs  util.rs
crates/server/src/core/: database.rs  document.rs  error.rs  language.rs  lock.rs  map.rs  mod.rs  parser.rs  reference.rs  rope.rs  session.rs  text.rs
crates/server/src/handler/: text_document.rs
crates/server/src/lsp/: api.rs  capabilities.rs  mod.rs  server.rs
crates/server/src/provider/: diagnostics.rs  document_symbol.rs  hover.rs  mod.rs  semantic_tokens.rs  text_document.rs
crates/server/src/provider/diagnostics/: wast.rs  wat.rs
crates/server/src/provider/document_symbol/: mod.rs  wast.rs  wat.rs
crates/server/src/provider/semantic_tokens/: builder.rs  mod.rs  node_walker.rs  wast.rs  wat.rs
crates/server/src/provider/text_document/: document_symbol.rs  publish_diagnostics.rs  semantic_tokens.rs
crates/server/src/provider/text_document/document_symbol/: wast.rs  wat.rs
crates/server/src/provider/text_document/publish_diagnostics/: wat.rs
crates/server/src/provider/text_document/semantic_tokens/: builder.rs  wast.rs  wat.rs
crates/server/src/service/: analyzer.rs  auditor.rs  mod.rs  synchronizer.rs  synthesizer.rs
crates/server/src/service/elaborator/: mod.rs  wast.rs  wat.rs
crates/server/src/util/: mod.rs  node_walker.rs
crates/server/tests/: lib.rs
crates/server/tests/all/: cli.rs  lsp.rs
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/annotations/: annotations.json  block.json  br.json  break-drop.json  call.json  call_indirect.json  const.json  endianness.json  fac.json  i32.json  if.json  int_exprs.json  linking.json  loop.json  memory.json  memory_size.json  names.json  start.json  unreachable.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/bulk_memory_operations/: data.json  elem.json  exports.json  imports.json  inline-module.json  left-to-right.json  linking.json  local_set.json  memory_copy.json  memory_fill.json  memory_init.json  names.json  table.json  table_copy.json  table_init.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/exception_handling/: address.json  br_table.json  bulk.json  call_indirect.json  conversions.json  elem.json  float_exprs.json  func.json  imports.json  linking.json  memory_copy.json  memory_grow.json  memory_init.json  ref_func.json  ref_null.json  select.json  switch.json  table.json  table_copy.json  table_get.json  table_init.json  table_size.json  token.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/function_references/: br_on_null.json  br_table.json  call_ref.json  exports.json  float_literals.json  func_bind.json  global.json  i32.json  if.json  let.json  linking.json  local_tee.json  memory.json  memory_redundancy.json  ref.json  ref_as_non_null.json  ref_is_null.json  ref_null.json  return_call_ref.json  select.json  store.json  table-sub.json  table.json  table_fill.json  table_set.json  type-equivalence.json  type.json  unwind.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/interface_types/: anyref.json  bad-export.json  bad-export2.json  bad-implement.json  bad-implement3.json  bad-implement4.json  bad-implement5.json  bad-implement7.json  bad-memory-to-string.json  bad-memory-to-string4.json  bad-memory-to-string5.json  bad-string-to-memory.json  call.json  convert.json  defer-call.json  empty.json  export.json  func-bad-ty.json  func.json  i32-vs-s32.json  implement.json  implement1.json  implement2.json  implement3.json  implement5.json  import-bad-ty.json  imports.json  lots.json  memory-and-string.json  memory-import.json  no-wrapping-module.json  not-interface2.json  string-to-memory.json  strings-in-imports.json  typeck1.json  typeck2.json  typeck3.json  typeck4.json  types-invalid.json  types-wrong-order.json  (+4 more)
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/multi_memory/: block.json  br.json  br_table.json  comments.json  const.json  data.json  elem.json  imports.json  load.json  memory.json  memory_grow.json  memory_size.json  store.json  traps.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/reference_types/: call.json  f32_bitwise.json  float_memory.json  global.json  i64.json  loop.json  memory_fill.json  ref_is_null.json  table_grow.json
crates/server/tests/goldenfiles/lsp/textDocument/documentSymbol/corpus/simd/: br_if.json  call_indirect.json  elem.json  func_ptrs.json  int_literals.json  memory_trap.json  select.json  simd_address.json  simd_align.json  simd_bit_shift.json  simd_bitwise.json  simd_boolean.json  simd_const.json  simd_conversions.json  simd_f32x4.json  simd_f32x4_arith.json  simd_f32x4_cmp.json  simd_f64x2.json  simd_f64x2_arith.json  (+21 more)
crates/shared/: Cargo.toml
crates/shared/src/: jsonrpc.rs  lib.rs
crates/shared/src/core/: error.rs  mod.rs
crates/shared/src/lsp/: mod.rs
crates/shared/src/lsp/cfg/: mod.rs
crates/testing/: Cargo.toml
crates/testing/src/: jsonrpc.rs  lib.rs  lsp.rs  service.rs
crates/testing/tests/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/lsp/text_document/: did_open.rs
(+1335 files in other folders)
