[package]
edition = "2018"
name = "webassembly-language-server"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/darinmorrison/webassembly-language-server"
description = """
A language server implementation for WebAssembly
"""

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
cc = "1.0.50"

[dependencies]
env_logger = "0.7.1"
dashmap = "3.7.0"
failure = "0.1.7"
jsonrpc-core = "14.0.5"
log = "0.4.8"
lsp-types = { version = "0.73.0", features = ["proposed"] }
sled = { version = "0.31.0", features = ["compression"] }
tokio = { version = "0.2.13", features = ["io-std", "macros"] }
tower-lsp = "0.9.1"
tree-sitter = "0.6.3"
tree-sitter-highlight = { git = "https://github.com/tree-sitter/tree-sitter", rev = "e259af6" }
uuid = { version = "0.8.1", features = ["v4"] }
zerocopy = "0.3.0"

[workspace]
members = [
]

[patch.crates-io]
tower-lsp = { git = "https://github.com/darinmorrison/tower-lsp", branch = "proposed-api" }
