[package]
edition = "2018"
name = "wasm-language-server"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
A language server implementation for WebAssembly
"""

[[bin]]
name = "wasm-language-server"
path = "src/bin/main.rs"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["compression", "threaded"]
compression = ["sled/compression"]
threaded = ["tokio/rt-threaded"]

[build-dependencies]
built = { version = "0.4.0", features = ["git2"] }
cc = "1.0.50"

[dependencies]
clap = "2.33.0"
dashmap = "3.7.0"
env_logger = "0.7.1"
failure = "0.1.7"
futures = "0.3.4"
jsonrpc-core = "14.0.5"
lazy_static = "1.4.0"
log = "0.4.8"
lsp-types = "0.73.0"
sled = "0.31.0"
tokio = { version = "0.2.13", features = ["io-std", "macros", "sync"] }
tower-lsp = "0.10.0"
tree-sitter = "0.6.3"
uuid = { version = "0.8.1", features = ["v4"] }
zerocopy = "0.3.0"

[workspace]
members = [
]

[patch.crates-io]
