[package]
edition = "2018"
name = "wasm-language-server"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
A language server implementation for WebAssembly
"""

[[bin]]
name = "wasm-language-server"
path = "src/bin/main.rs"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["compression", "threaded"]
compression = ["sled/compression"]
threaded = ["tokio/rt-threaded"]

[build-dependencies]
built = { version = "0.4.0", features = ["git2"] }
cc = "1.0.50"

[dependencies]
anyhow = "1.0.28"
clap = "2.33.0"
dashmap = "3.7.0"
env_logger = "0.7.1"
futures = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
sled = "0.33.0"
thiserror = "1.0.14"
tokio = { version = "0.2.13", features = ["io-std", "macros", "sync", "time"] }
tower-lsp = "0.11.0"
tree-sitter = "0.16.1"
uuid = { version = "0.8.1", features = ["v4"] }
zerocopy = "0.3.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["io-std", "macros", "sync", "time", "test-util"] }
tower-test = "0.3.0"

[workspace]
members = [
]

[patch.crates-io]
