[package]
publish = false
edition = "2018"
name = "wasm-lsp-fuzz"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "lsp_textDocument-didOpen"
path = "fuzz_targets/lsp/text_document/did_open.rs"
bench = false
doc = false
test = false

[features]
default = ["runtime-tokio"]
runtime-async-std = [
  "async-std",
  "lspower/runtime-agnostic",
  "wasm-lsp-server/runtime-agnostic",
]
runtime-futures = [
  "blocking",
  "lspower/runtime-agnostic",
  "wasm-lsp-server/runtime-agnostic",
]
runtime-smol = [
  "lspower/runtime-agnostic",
  "smol",
  "wasm-lsp-server/runtime-agnostic",
]
runtime-tokio = [
  "lspower/runtime-tokio",
  "tokio",
  "wasm-lsp-server/runtime-tokio",
]

[dependencies]
async-std = { version = "1.9", optional = true }
blocking = { version = "1.0", optional = true }
futures = "0.3"
libfuzzer-sys = "0.3"
lsp = { version = "0.86", package = "lsp-types" }
lspower = { version = "0.6", default-features = false }
serde_json = "1.0"
smol = { version = "1.2", optional = true }
testing = { package = "wasm-lsp-testing", version = "0.0", path = "../crates/testing" }
tokio = { version = "1.0", optional = true }
wasm-lsp-server = { version = "0.0", path = "../crates/server", default-features = false }
wasm-smith = "0.3"
wasmprinter = "0.2"
