[package]
publish = false
edition = "2021"
name = "wasm-lsp-fuzz"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "lsp_textDocument-didOpen"
path = "fuzz_targets/lsp/text_document/did_open.rs"
bench = false
doc = false
test = false

[features]
default = []

[dependencies]
blocking = "1.0"
futures = "0.3"
libfuzzer-sys = "0.4"
lsp = { version = "0.93", package = "lsp-types" }
serde_json = "1.0"
testing = { package = "wasm-lsp-testing", version = "0.0", path = "../crates/testing" }
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
wasm-lsp-server = { version = "0.0", path = "../crates/server", default-features = false }
wasm-smith = "0.11"
wasmprinter = "0.2"
