[package]
edition = "2021"
name = "wasm-lsp-browser"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
A web browser interface for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-lsp-languages = { version = "0.0", path = "../languages" }
wasm-lsp-server = { version = "0.0", path = "../server", default-features = false }
futures = "0.3"
js-sys = "0.3"
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
tree-sitter = { version = "*", package = "tree-sitter-facade" }
wasm-bindgen = "=0.2.81"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"] }
wasm-streams = "0.2"
web-tree-sitter-sys = "1.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "ReadableStream",
  "WritableStream",
]
