[package]
edition = "2018"
name = "wasm-lsp-cli"
version = "0.0.0"
authors = ["hvithrafn <hvithravn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
A command-line interface for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "wasm-lsp"
path = "src/bin/main.rs"

[features]
default = ["runtime-tokio"]
runtime-futures = [
  "blocking",
  "futures",
  "lspower/runtime-agnostic",
  "wasm-lsp-server/runtime-agnostic",
]
runtime-smol = [
  "lspower/runtime-agnostic",
  "smol",
  "wasm-lsp-server/runtime-agnostic",
]
runtime-tokio = [
  "lspower/runtime-tokio",
  "tokio",
  "wasm-lsp-server/runtime-tokio",
]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.4", features = ["git2"] }

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger = "0.8"

[dependencies.blocking]
version = "1.0"
optional = true

[dependencies.futures]
package = "futures-lite"
version = "1.11"
optional = true

[dependencies.lspower]
git = "https://github.com/rslint/lspower"
branch = "main"
default-features = false

[dependencies.smol]
version = "1.2"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["io-std", "macros", "sync"]
optional = true

[dependencies.wasm-lsp-server]
version = "0.0"
path = "../server"
default-features = false

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
