[package]
edition = "2021"
name = "wasm-lsp-cli"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
A command-line interface for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "wasm-lsp"
path = "src/bin/main.rs"

[features]
default = []

[build-dependencies]
anyhow = "1.0"
built = { version = "0.5", features = ["git2"] }

[dependencies]
anyhow = "1.0"
blocking = "1.0"
clap = "3.1"
env_logger = "0.9"
futures = "0.3"
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
wasm-lsp-languages = { version = "0.0", path = "../languages" }
wasm-lsp-server = { version = "0.0", path = "../server", default-features = false }

[dev-dependencies]
predicates = "2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.0"
