[package]
edition = "2018"
name = "wasm-lsp-languages"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
Tree-sitter languages for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
anyhow = "1.0"
cc = "1.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "=0.2.80", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.futures]
version = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-tree-sitter-sys]
version = "0.6.0"
