[package]
edition = "2018"
name = "wasm-language-server-macros"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
Macros for the WebAssembly language server implementation
"""

[lib]
proc-macro = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
glob = "0.3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
