[package]
edition = "2018"
name = "wasm-lsp-macros"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
Internal macros for the WebAssembly language server implementation.
"""

[lib]
proc-macro = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
glob = "0.3"
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
thiserror = "1.0"
