[package]
edition = "2021"
name = "wasm-lsp-macros"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
Internal macros for the WebAssembly language server implementation.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
glob = "0.3"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
thiserror = "1.0"
wasm-lsp-languages = { version = "0.0", path = "../languages" }

[dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.20"
