[package]
edition = "2018"
name = "wasm-language-server-parsers"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
Tree-sitter parsers for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[[bench]]
name = "all"
harness = false

[build-dependencies]
anyhow = "1.0"
cc = "1.0"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
thiserror = "1.0"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
path = "../../../tree-sitter-facade"

[dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.17"

[dev-dependencies]
criterion = "0.3"
glob = "0.3"
wasm-language-server-macros = { path = "../macros", version = "0.0.0" }
