[package]
edition = "2018"
name = "wasm-lsp-parsers"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = []
description = """
Tree-sitter parsers for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
anyhow = "1.0"
cc = "1.0"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
thiserror = "1.0"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.futures]
version = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-tree-sitter-sys]
version = "0.2.0"
