[package]
edition = "2018"
name = "wasm-lsp-rope"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = ["wee_alloc"]

[dependencies]
anyhow = "1.0"

[dependencies.lsp]
package = "lsp-types"
version = "0.86"

[dependencies.tree-sitter]
package = "tree-sitter-facade"
path = "../../../tree-sitter-facade"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ropey = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "=0.2.69", features = ["strict-macro"] }
wee_alloc = { version = "0.4", optional = true }
