[package]
edition = "2018"
name = "wasm-lsp-server"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = []
description = """
A language server implementation for WebAssembly.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = ["runtime-tokio"]
goldenfiles = []
runtime-agnostic = [
  "async-lock",
  "lspower/runtime-agnostic",
]
runtime-tokio = [
  "lspower/runtime-tokio",
  "tokio",
  "tokio/rt-multi-thread",
]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.4", features = ["git2"] }

[dependencies]
anyhow = "1.0"
async-lock = { version = "2.3", optional = true }
bytes = "1.0"
clap = "2.33"
dashmap = "4.0"
env_logger = "0.8"
funty = ">= 1.1.0, < 1.2.0" # FIXME: remove once unbroken upstream
futures = "0.3"
log = "0.4"
lsp = { version = "0.86", package = "lsp-types" }
lsp-text = "0.0"
lspower = { version = "0.6", default-features = false }
ropey = "1.2"
serde_json = "1.0"
tap = ">= 1.0.0, < 1.0.1" # FIXME: remove once unbroken upstream
thiserror = "1.0"
tokio = { version = "1.0", features = ["io-std", "sync"], optional = true }
wasm-lsp-syntax = { version = "0.0", path = "../syntax" }


[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.0"

[dev-dependencies]
criterion = "0.3"
futures = "0.3"
glob = "0.3"
indoc = "1.0"
testing = { package = "wasm-lsp-testing", version = "0.0", path = "../testing" }
wasm-lsp-macros = { version = "0.0", path = "../macros" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
goldenfile = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-udeps.ignore]
normal = ["env_logger"]
