[package]
edition = "2018"
name = "wasm-lsp-server"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
A language server implementation for WebAssembly.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = ["runtime-tokio"]
goldenfiles = []
runtime-agnostic = [
  "async-lock",
  "tower-lsp/runtime-agnostic",
]
runtime-tokio = [
  "tokio",
  "tokio/rt-multi-thread",
  "tower-lsp/runtime-tokio",
]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.5", features = ["git2"] }

[dependencies]
anyhow = "1.0"
async-lock = { version = "2.3", optional = true }
bytes = "1.0"
clap = "3.1"
dashmap = "5.3"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
lsp = { version = "0.93", package = "lsp-types" }
lsp-text = { version = "0.4", features = ["tree-sitter"] }
ropey = "1.2"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.3", features = ["io-std", "sync"], optional = true }
tower-lsp = { version = "0.17", default-features = false }
wasm-lsp-languages = { version = "0.0", path = "../languages" }
wasm-lsp-syntax = { version = "0.0", path = "../syntax" }

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.3"

[dev-dependencies]
criterion = "0.3"
futures = "0.3"
glob = "0.3"
indoc = "1.0"
testing = { package = "wasm-lsp-testing", version = "0.0", path = "../testing" }
wasm-lsp-macros = { version = "0.0", path = "../macros" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
goldenfile = "1.0"
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-udeps.ignore]
normal = ["env_logger"]
