[package]
edition = "2021"
name = "wasm-lsp-server"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-lsp-server"
keywords = []
description = """
A language server implementation for WebAssembly.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = []
goldenfiles = []

[build-dependencies]
anyhow = "1.0"
built = { version = "0.5", features = ["git2"] }

[dependencies]
anyhow = "1.0"
async-lock = "2.3"
async-trait = "0.1"
bytes = "1.0"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
lsp = { version = "0.93", package = "lsp-types" }
lsp-text = { version = "0.5", features = ["tree-sitter"] }
ropey = "1.2"
serde_json = "1.0"
thiserror = "1.0"
tower-lsp = { version = "0.17", default-features = false, features = ["runtime-agnostic"] }
wasm-lsp-languages = { version = "0.0", path = "../languages" }
wasm-lsp-syntax = { version = "0.0", path = "../syntax" }

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.4"

[dev-dependencies]
criterion = "0.3"
glob = "0.3"
indoc = "1.0"
testing = { package = "wasm-lsp-testing", version = "0.0", path = "../testing" }
wasm-lsp-macros = { version = "0.0", path = "../macros" }

[target.'cfg(any(target_os = "wasi", not(target_arch = "wasm32")))'.dev-dependencies]
futures-test = "0.3"
goldenfile = "1.0"

[package.metadata.cargo-udeps.ignore]
normal = ["env_logger"]
