[package]
edition = "2018"
name = "wasm-language-server-testing"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/wasm-lsp/wasm-language-server"
keywords = ["lsp", "wasm"]
description = """
Testing support framework for the WebAssembly language server.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = ["compression", "runtime-tokio"]
compression = ["wasm-language-server/compression"]
runtime-agnostic = [
  "compression",
  "lspower/runtime-agnostic",
  "wasm-language-server/runtime-agnostic",
]
runtime-tokio = [
  "compression",
  "lspower/runtime-tokio",
  "wasm-language-server/runtime-tokio",
]

[dependencies]
anyhow = "1.0.28"
serde_json = { version = "1.0", features = ["preserve_order"] }
tower-test = "0.3.0"

[dependencies.lspower]
git = "https://github.com/rslint/lspower"
branch = "main"
default-features = false

[dependencies.wasm-language-server]
path = "../server"
version = "0.0.0"
default-features = false
